2007-10-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Added destructor to Cursor

	* Sybase.py: backward compatibility - restored deprecated
	use_datetime attribut

	* setup.py: Sybase libraries do not have "_r64" at the end on OSF1

	* Use setuptools and distribute ez_setup.py

2007-10-08  Sébastien Sablé  <sable@users.sourceforge.net>

	* Restored datetime kwarg for backward compatibility

2007-09-28  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected bug on ct_cursor with parameters

2007-09-27  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Completed input type mapping

2007-09-20  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected various compilation warnings (some linked to python
	2.5)

	* Sybase.py: Added a prepare method to Cursor

2007-09-19  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Refactoring _cancel_cmd

	* Sybase.py: Corrected nextset after refactoring

2007-09-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected callproc after refactoring

2007-09-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected CS_CURSOR_CLOSE acts as ct_cancel on a
	ct_cursor
	
	* Sybase.py: Add type mapping as proposed in
	http://www.uniqsys.com/~carsten/typemap.html by Carsten Haese

	* sybasect.c: Expose sybase date type functions

2007-08-28  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Refactoring - merged Fetchers, CTCursor and CmdCursor
	in Cursor

2007-08-08  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py, doc/dbapi.tex: Additional 'locale' argument to
	connect and Connection to set the locale of the connection thanks
	to patch by Harri Pasanen

	* Sybase.py: Corrected syntax specific to python 2.5

	* setup.py: Using setuptools

2007-08-06  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added support for python Decimal objects in databuf

	* Sybase.py: Using ct_cursor for select requests
