@@ -1,3 +1,7 @@
+2007-10-18  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* numeric.c: Handle engineer notation of numbers in numeric
+
 2007-10-15  Sébastien Sablé  <sable@users.sourceforge.net>
 
 	* Sybase.py: Added destructor to Cursor
